fixed text align again

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,6 @@ body {
     background-size: cover;
     background-blend-mode: lighten;
 }
- 
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
 
 .navbar {
     overflow: hidden;
